# myspeech

./: .gitignore  CLAUDE.md  MySpeech.spec  README.md  config.py  install.sh  main.py  pyproject.toml  setup.py
myspeech/: __init__.py  app.py  appkit_runner.py  clipboard.py  hotkey.py  menubar.py  popup.py  recorder.py  server.py  transcriber.py  user_config.py
resources/: MySpeech.icns
scripts/: create_icon.py  create_menubar_icon.py
